--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-mocks": "^1.5.0",
-    "angular-bootstrap": "^1.2.4"
+    "angular-bootstrap": "^1.2.4",
+    "angular-xeditable": "^0.1.10"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
