--- a/package.json
+++ b/package.json
@@ -32,7 +32,12 @@
     "jshint-stylish": "^1.0.0",
     "express": "~4.0.0",
     "mongoose": "~3.6.13",
-    "body-parser": "~1.0.1"
+    "body-parser": "~1.0.1",
+    "bcrypt": "^0.8.5",
+    "jwt-simple": "^0.3.1",
+    "morgan": "~1.5.0",
+    "passport": "^0.3.0",
+    "passport-jwt": "^1.2.1"
   },
   "engines": {
     "node": ">=0.10.0"
