--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-touch": "^1.4.0",
     "angular-mocks": "^1.5.0",
     "angular-bootstrap": "^1.2.4",
-    "angular-xeditable": "^0.1.10"
+    "angular-xeditable": "^0.1.10",
+    "angular-ui-router": "^0.2.18"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
