--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "server.js",
   "devDependencies": {
     "autoprefixer-core": "^5.2.1",
+    "bcrypt": "^0.8.5",
+    "body-parser": "~1.0.1",
+    "express": "~4.0.0",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
     "grunt-concurrent": "^1.0.0",
@@ -21,23 +24,26 @@
     "grunt-filerev": "^2.1.2",
     "grunt-google-cdn": "^0.4.3",
     "grunt-jscs": "^1.8.0",
+    "grunt-karma": "^0.12.1",
     "grunt-newer": "^1.1.0",
     "grunt-ng-annotate": "^0.9.2",
     "grunt-postcss": "^0.5.5",
     "grunt-svgmin": "^2.0.0",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
+    "jasmine-core": "^2.4.1",
     "jit-grunt": "^0.9.1",
-    "time-grunt": "^1.0.0",
     "jshint-stylish": "^1.0.0",
-    "express": "~4.0.0",
-    "mongoose": "~3.6.13",
-    "body-parser": "~1.0.1",
-    "bcrypt": "^0.8.5",
     "jwt-simple": "^0.3.1",
+    "karma": "^0.13.22",
+    "karma-jasmine": "^0.3.7",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "mongoose": "~3.6.13",
     "morgan": "~1.5.0",
     "passport": "^0.3.0",
-    "passport-jwt": "^1.2.1"
+    "passport-jwt": "^1.2.1",
+    "phantomjs-prebuilt": "^2.1.5",
+    "time-grunt": "^1.0.0"
   },
   "engines": {
     "node": ">=0.10.0"
